--- a/An Adventure to Remember/.classpath
+++ b/An Adventure to Remember/.classpath
@@ -10,5 +10,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/jars/SST.jar"/>
+	<classpathentry kind="lib" path="lib/jars/STB.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
